# thurup

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/: .coverage  .env.template  CLAUDE.md  alembic.ini  debug_bid_flow.py  debug_session.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 22dbfa4b623f_initial_sqlmodel_migration.py  71b248a28348_add_short_code_to_games.py  e74120476dcd_add_round_history_table.py
backend/app/: constants.py  logging_config.py  main.py  middleware.py  models.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  game_server.py
backend/app/db/: __init__.py  cleanup.py  config.py  models.py  persistence.py  repository.py
backend/app/game/: __init__.py  ai.py  bidding_manager.py  enums.py  hidden_trump.py  rules.py  session.py  trick_manager.py
backend/app/utils/: __init__.py  game_resolution.py  shortcode.py
backend/tests/: README.md  conftest.py
backend/tests/e2e/: test_complete_flow.py
backend/tests/integration/: test_admin_comprehensive.py  test_api_integration.py  test_history_comprehensive.py  test_persistence_comprehensive.py  test_reveal_trump_websocket.py  test_websocket_validation.py
backend/tests/unit/: conftest.py  test_ai.py  test_bidding.py  test_bot_runner.py  test_card_ranking.py  test_cleanup.py  test_connection_manager.py  test_game_resolution.py  test_hidden_trump.py  (+8 more)
(+128 files in other folders)
